--- a/src/data/default_settings.ini
+++ b/src/data/default_settings.ini
@@ -1,6 +1,9 @@
 [style]
-widgets-background-color= red
-widgets-text-color= black
+widgets-background-color= #FF0000
+widgets-text-color= #00FF00
+nodes-color= #0000FF
+edges-color= #FFFFFF
+preset= none
 
 [other]
 info-1= true
