--- a/src/data/default_settings.ini
+++ b/src/data/default_settings.ini
@@ -3,7 +3,7 @@ widgets-background-color= #FF0000
 widgets-text-color= #00FF00
 nodes-color= #0000FF
 edges-color= #FFFFFF
-preset= none
+preset= dark-mode
 
 [other]
 info-1= true
