Change bg color in Settings Dialog

--- a/src/data/default_settings.ini
+++ b/src/data/default_settings.ini
@@ -5,6 +5,7 @@ nodes-color= #0000FF
 edges-color= #FFFFFF
 preset= dark-mode
 
-[other]
-info-1= true
-info-2= false
+[general-settings]
+info-1= aa
+info-2= aa
+
