--- a/src/data/default_settings.ini
+++ b/src/data/default_settings.ini
@@ -3,6 +3,8 @@ widgets-background-color= #FF0000
 widgets-text-color= #00FF00
 nodes-color= #0000FF
 edges-color= #FFFFFF
+path-color= #FF0000
+highlight-color= #0000FF
 preset= dark-mode
 
 [general-settings]
