fix defualt style

--- a/src/data/default_settings.ini
+++ b/src/data/default_settings.ini
@@ -1,11 +1,11 @@
 [style]
-widgets-background-color= #FF0000
-widgets-text-color= #00FF00
-nodes-color= #0000FF
-edges-color= #FFFFFF
-path-color= #FF0000
-highlight-color= #0000FF
-preset= dark-mode
+edges-color=#000000
+highlight-color=#0000ff
+nodes-color=#ffffff
+path-color=#ff0000
+preset=none
+widgets-background-color=#f4f4f4
+widgets-text-color=#262626
 
 [general-settings]
 info-1= aa
